tests/cases/errors/invalid-variable/undefined-in-nested-object/input.sym
{ $host localhost }
{ :database
  { :primary
    { :host $host
    , :port $db_port
    }
  }
}
